kubernetes/expres-api/kube-ingress/rapi-api-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rapi-api-cliente1-service
spec:
  selector:
    app: rapi-api-cliente1
  ports:
    - protocol: TCP
      port: 80          # 🔹 Puerto del servicio dentro del clúster (este se mantiene)
      targetPort: 3050  # 🔹 Puerto al que el servicio redirige dentro del POD (DEBE ser 8080)

---
apiVersion: v1
kind: Service
metadata:
  name: rapi-api-cliente2-service
spec:
  selector:
    app: rapi-api-cliente2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3050
