kubernetes/expres-api/kube-ingress/rapi-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rapi-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: rapi.local
    http:
      paths:
      - path: /cliente1
        pathType: Prefix
        backend:
          service:
            name: rapi-api-cliente1-service
            port:
              number: 80
      - path: /cliente2
        pathType: Prefix
        backend:
          service:
            name: rapi-api-cliente2-service
            port:
              number: 80
